[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdypy-io"
version = "0.3.1"
authors = [{name = "Janko Slavič et al.", email = "janko.slavic@fs.uni-lj.si"}]
maintainers = [{name = "Janko Slavič et al.", email = "janko.slavic@fs.uni-lj.si"}]
license = "MIT"
description = "Reading and writing of data in structural dynamics."
readme = "README.rst"
keywords = ['read/write', 'io', 'structural dynamics', 'UFF', 'UNV', 'Universal File Format', 'LVM', 'MRAW']
requires-python = ">=3.10"
dependencies = [
    "pyuff==2.1",
    "lvm-read==1.20",
    "pyMRAW>=0.30",
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering',
    'Programming Language :: Python :: 3.10',
    "License :: OSI Approved :: MIT License",
]

[tool.hatch.build.targets.wheel]
include = ["sdypy"]

[project.optional-dependencies]
dev = [
    "sphinx",
    "twine",
    "wheel",
    "pytest",
    "build",
    "sphinx-rtd-theme",
    "sphinx-copybutton>=0.5.2",
]

[project.urls]
homepage = "https://github.com/sdypy/sdypy-io"
documentation = "https://sdypy-io.readthedocs.io/en/latest/index.html"
source = "https://github.com/sdypy/sdypy-io"
