[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sdypy-io"
version = "0.4.0"
authors = [{name = "Janko Slavič et al.", email = "janko.slavic@fs.uni-lj.si"}]
maintainers = [{name = "Janko Slavič et al.", email = "janko.slavic@fs.uni-lj.si"}]
license = "MIT"
description = "Reading and writing of data in structural dynamics."
readme = "README.rst"
keywords = ['read/write', 'io', 'structural dynamics', 'UFF', 'UNV', 'Universal File Format', 'LVM', 'MRAW']
requires-python = ">=3.10"
dependencies = [
    "pyuff>=2.1",
    "lvm-read>=1.20",
    "pyMRAW>=0.30",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-copybutton>=0.5.2",
]
dev = [
    "sdypy-io[docs]",
    "twine",
    "wheel",
    "pytest",
    "build",
    "flake8",
]

[project.urls]
homepage = "https://github.com/sdypy/sdypy-io"
documentation = "https://sdypy-io.readthedocs.io/en/latest/index.html"
source = "https://github.com/sdypy/sdypy-io"

[tool.hatch.build.targets.wheel]
packages = ["sdypy"]

[tool.hatch.build.targets.sdist]
include = [
    "sdypy/",
    "tests/",
    "docs/",
    "README.rst",
    "License",
    "pyproject.toml",
    "readthedocs.yaml",
    "CONTRIBUTING.rst",
]
exclude = [
    "docs/_build/",
    "docs/build/",
]
